--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h1, h2, h3, h4 {
 
 .navv {
     background-color: #97CAE7;
+    height: auto;
 }
 
 .scent {
@@ -29,7 +30,11 @@ font-family:"Bebas Neue", sans-serif;
 font-size: 20px;
 color: #020415 !important;
 letter-spacing: 3px !important;
-margin-left: 45px;
+margin-left: 20px;
+}
+
+.margint {
+    margin-top: 10px;
 }
 
 
@@ -42,7 +47,22 @@ margin-left: 45px;
 }
 
 .liist2:hover {
-    color: white !important;
+    color: black !important;
+}
+
+#hide {
+    float:right;
+     cursor:pointer;
+     margin: 4px 2px;
+     font-size: 18px;
+     display: none;
+}
+
+#show {
+    float:right;
+     cursor:pointer;
+     margin: 4px 2px;
+     font-size: 18px;
 }
 
 
@@ -105,7 +125,7 @@ margin-left: 45px;
 }
 
 .height {
-    height: 50vh !important;
+    height: 55vh !important;
 }
 
 .imgheight {
@@ -120,15 +140,14 @@ margin-left: 45px;
 }
 
 .logoimg{
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     border: none;
     border-radius: 50%;
-    margin-right: 3px;
-    position: fixed;
-    top: 5px;
+    margin-left: 15px !important;
 
 }
+
 
 #view2{
     display: block;
@@ -251,13 +270,7 @@ margin-left: 45px;
     color: hsl(0, 0%, 96%);
     padding: 32px;
   }
-  footer a {
-    color: #f5f5f5;
-  }
-  footer a:hover {
-    color: #777;
-    text-decoration: none;
-  }  
+  
 .whatsapp {
     color: rgb(26, 250, 26);
     font-size: 25px;
@@ -306,6 +319,10 @@ margin-left: 45px;
     
 }
 
+*a:hover {
+    color: #020415 !important;
+}
+
 #userview {
     margin-top: 150px;
     border: 1x solid blue;
@@ -325,6 +342,10 @@ margin-left: 45px;
     color: white !important;
 }
 
+.white :hover{
+    color: #000!important;
+}
+
 #username {
     padding-top: 400px;
     border: none;
@@ -333,14 +354,30 @@ margin-left: 45px;
 }
 
 .profileImg {
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
 }
+
 
 .imgProfile {
     width: 150px;
     height: 150px;
 }
+
+.usermenu a{
+    display: block;
+    text-decoration: none;
+    font-size: 16px;
+    border: 1px solid black;
+    background-color: whitesmoke;
+    width: 150px;
+    height: auto;
+}
+
+.usermenu {
+    display: none;
+}
+
 
 @media screen and (min-width:700px) {
 
